
  - To help with the "column_reflect" event being used
    with specific Table objects instead of all instances
    of Table, listeners can be added to a Table object 
    inline with its construction using a new argument 
    "listeners", a list of tuples of the form 
    (<eventname>, <fn>), which are applied to the Table 
    before the reflection process begins.

- dialect
  - Changed exception raised to ArgumentError when an
    invalid dialect is specified. [ticket:2060]

- examples
  - Updated the association, association proxy examples
    to use declarative, added a new example 
    dict_of_sets_with_default.py, a "pushing the envelope" 
    example of association proxy.

0.7.0b2
========
- orm
  - Fixed bug whereby Session.merge() would call the
    load() event with one too few arguments.
    [ticket:2053]

  - Added logic which prevents the generation of 
    events from a MapperExtension or SessionExtension 
    from generating do-nothing events for all the methods 
    not overridden. [ticket:2052]

- sql
  - Renamed the EngineEvents event class to 
    ConnectionEvents.  As these classes are never
    accessed directly by end-user code, this strictly
    is a documentation change for end users.  Also
    simplified how events get linked to engines
    and connections internally. [ticket:2059]

  - The Sequence() construct, when passed a MetaData() 
    object via its 'metadata' argument, will be 
    included in CREATE/DROP statements within
    metadata.create_all() and metadata.drop_all(), 
    including "checkfirst" logic.  [ticket:2055]

  - The Column.references() method now returns True
    if it has a foreign key referencing the
    given column exactly, not just it's parent
    table.  [ticket:2064]

- postgresql
  - Fixed regression from 0.6 where SMALLINT and
    BIGINT types would both generate SERIAL
    on an integer PK column, instead of 
    SMALLINT and BIGSERIAL [ticket:2065]

- ext
  - Association proxy now has correct behavior for